# Netology_Part_6

./: .gitignore  README.md
6_4/: CMakeLists.txt  MyDataBase.cpp  MyDataBase.h  main.cpp
6_6/: 6_6.sln  6_6.vcxproj  6_6.vcxproj.filters  MyDatabase.h  main.cpp
